k8s/fraud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-service
  namespace: sentinelx-prod
  labels:
    app: fraud-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fraud-service
  template:
    metadata:
      labels:
        app: fraud-service
    spec:
      containers:
        - name: fraud-service
          image: sentinelx/fraud-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
          resources:
            requests:
              cpu: "300m"
              memory: "768Mi"
            limits:
              cpu: "1200m"
              memory: "1536Mi"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8086
            initialDelaySeconds: 25
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8086
            initialDelaySeconds: 15
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-service
  namespace: sentinelx-prod
spec:
  type: ClusterIP
  ports:
    - port: 8086
      targetPort: 8086
  selector:
    app: fraud-service
