k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentinelx-ingress
  namespace: sentinelx-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
spec:
  rules:
    - host: api.sentinelx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
          - path: /fraud
            pathType: Prefix
            backend:
              service:
                name: fraud-service
                port:
                  number: 8086
          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: ml-service
                port:
                  number: 8000
